continue training from disk: code updated

--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -20,7 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = 11 # set this to prevent overlapped saving of model and data"
+    "run_id = 0 # set this to prevent overlapped saving of model and data\n",
+    "DO_MASK = True\n",
+    "VARIANCE_THRESHOLD = True"
    ]
   },
   {
@@ -86,6 +88,15 @@
    "source": [
     "max_epochs = len(epoch_loss_values)\n",
     "val_interval = len(epoch_loss_values)//len(metric_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(epoch_loss_values)"
    ]
   },
   {
@@ -261,15 +272,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(os.path.join(load_dir, \"best_metric_model.pth\"), weights_only=True))\n",
+    "checkpoint = torch.load(os.path.join(load_dir, 'latest_checkpoint.pth'), weights_only=True)\n",
+    "model.load_state_dict(checkpoint['model_state_dict'])\n",
     "model.eval()\n",
     "channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
     "\n",
     "with torch.no_grad():\n",
     "    this_input = all_dataset[0]\n",
     "    input_image = this_input[\"image\"].unsqueeze(0).to(device)\n",
-    "    input_mask = [True, False, True, False]\n",
-    "    input_image[:, input_mask, ...] = 0\n",
+    "    if DO_MASK:\n",
+    "        input_mask = [True, False, True, False]\n",
+    "        input_image[:, input_mask, ...] = 0\n",
     "    this_output = inference(input_image)"
    ]
   },
@@ -299,8 +312,9 @@
     "        title = \"Output: \" + r\"$\\sigma$\" + \"\"\n",
     "        brain_slice = this_output[0, index+4, :, :, h_index]\n",
     "        brain_slice = torch.exp(brain_slice)\n",
-    "        var_threshold = torch.quantile(brain_slice.float(), 0.9).item()\n",
-    "        brain_slice[brain_slice >= var_threshold] = var_threshold\n",
+    "        if VARIANCE_THRESHOLD:\n",
+    "            var_threshold = torch.quantile(brain_slice.float(), 0.95).item()\n",
+    "            brain_slice[brain_slice >= var_threshold] = var_threshold\n",
     "    plt.subplot(3, 4, start_index + index + 1)\n",
     "    if label == \"input\":\n",
     "        plt.title(channels[i], fontsize=30)\n",
