--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -48,7 +48,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "run_id = 81\n",
+        "run_id = 0\n",
         "DO_MASK = True\n",
         "SET_VARIANCE = True\n",
         "max_epochs = 600\n",
@@ -178,7 +178,7 @@
       "outputs": [],
       "source": [
         "save_dir = os.path.join(root_dir, f\"run_{run_id}\")\n",
-        "if os.path.exists(save_dir) and os.path.isdir(save_dir) and len(os.listdir(save_dir)) != 0:\n",
+        "if not CONTINUE_TRAINING and os.path.exists(save_dir) and os.path.isdir(save_dir) and len(os.listdir(save_dir)) != 0:\n",
         "    logger.warning(f\"{save_dir} already exists. Avoid overwrite by updating run_id.\")\n",
         "    exit()\n",
         "else:\n",
@@ -411,6 +411,33 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "optimizer = torch.optim.Adam(model.parameters(), 1e-4, weight_decay=1e-5)\n",
+        "lr_scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=max_epochs)\n",
+        "ep_start = 1\n",
+        "\n",
+        "epoch_loss_values = []\n",
+        "metric_values = []\n",
+        "\n",
+        "if CONTINUE_TRAINING:\n",
+        "    load_dir = save_dir\n",
+        "    checkpoint = torch.load(os.path.join(load_dir, 'latest_checkpoint.pth'), weights_only=True)\n",
+        "    model.load_state_dict(checkpoint['model_state_dict'])\n",
+        "    optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+        "    lr_scheduler.load_state_dict(checkpoint['scheduler_state_dict'])\n",
+        "    ep_start = checkpoint['epoch']\n",
+        "\n",
+        "    with open(os.path.join(load_dir, 'training_data.pkl'), 'rb') as f:\n",
+        "        training_data = pickle.load(f)\n",
+        "        epoch_loss_values = training_data['epoch_loss_values']\n",
+        "        metric_values = training_data['metric_values']"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -441,7 +468,10 @@
         "    cost1 = (target - outputs_mean)**2 / (2*torch.exp(2*log_std))\n",
         "    cost2 = log_std\n",
         "\n",
-        "    return torch.mean(cost1 + cost2)"
+        "    return torch.mean(cost1 + cost2)\n",
+        "\n",
+        "# Define the loss function\n",
+        "loss_function = GaussianNLLLoss_custom"
       ]
     },
     {
@@ -452,14 +482,7 @@
       },
       "outputs": [],
       "source": [
-        "# Define the loss function\n",
-        "loss_function = GaussianNLLLoss_custom\n",
-        "optimizer = torch.optim.Adam(model.parameters(), 1e-4, weight_decay=1e-5)\n",
-        "lr_scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=max_epochs)\n",
         "mse_metric = MSEMetric(reduction=\"mean\")\n",
-        "\n",
-        "epoch_loss_values = []\n",
-        "metric_values = []\n",
         "\n",
         "# define inference method\n",
         "def inference(input):\n",
@@ -475,23 +498,6 @@
         "scaler = torch.amp.GradScaler('cuda')\n",
         "# enable cuDNN benchmark\n",
         "torch.backends.cudnn.benchmark = True"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "ep_start = 1\n",
-        "if CONTINUE_TRAINING:\n",
-        "    load_dir = save_dir\n",
-        "    model.load_state_dict(torch.load(os.path.join(load_dir, \"best_metric_model.pth\"), weights_only=True))\n",
-        "    with open(os.path.join(load_dir, 'training_data.pkl'), 'rb') as f:\n",
-        "        training_data = pickle.load(f)\n",
-        "        epoch_loss_values = training_data['epoch_loss_values']\n",
-        "        metric_values = training_data['metric_values']\n",
-        "        ep_start = training_data['epoch']"
       ]
     },
     {
@@ -536,10 +542,6 @@
         "                    exit()\n",
         "            outputs = model(inputs)            \n",
         "            loss = loss_function(outputs, target)\n",
-        "\n",
-        "            if np.isnan(loss.item()):\n",
-        "                logger.warning(\"nan value encountered (1)!\")\n",
-        "                exit()\n",
         "        scaler.scale(loss).backward()\n",
         "        scaler.step(optimizer)\n",
         "        scaler.update()\n",
@@ -547,7 +549,7 @@
         "            logger.warning(f\"large loss encountered: {loss.item()}!\")\n",
         "            exit()\n",
         "        if np.isnan(loss.item()):\n",
-        "            logger.warning(\"nan value encountered (2)!\")\n",
+        "            logger.warning(\"nan value encountered!\")\n",
         "            exit()\n",
         "        epoch_loss += loss.item()\n",
         "        logger.info(\n",
@@ -580,25 +582,30 @@
         "            metric_values.append(metric)\n",
         "            mse_metric.reset()\n",
         "\n",
+        "            checkpoint = {\n",
+        "                'epoch': epoch,\n",
+        "                'model_state_dict': model.state_dict(),\n",
+        "                'optimizer_state_dict': optimizer.state_dict(),\n",
+        "                'scheduler_state_dict': lr_scheduler.state_dict(),\n",
+        "            }\n",
         "            torch.save(\n",
-        "                    model.state_dict(),\n",
-        "                    os.path.join(save_dir, \"latest_model.pth\"),\n",
-        "                )\n",
+        "                checkpoint,\n",
+        "                os.path.join(save_dir, 'latest_checkpoint.pth'),\n",
+        "            )\n",
         "            logger.info(f\"saved latest model at epoch: {epoch}\")\n",
         "\n",
         "            if metric > best_metric:\n",
         "                best_metric = metric\n",
         "                best_metric_epoch = epoch\n",
         "                torch.save(\n",
-        "                    model.state_dict(),\n",
-        "                    os.path.join(save_dir, \"best_metric_model.pth\"),\n",
+        "                    checkpoint,\n",
+        "                    os.path.join(save_dir, 'best_checkpoint.pth'),\n",
         "                )\n",
         "                logger.info(f\"saved new best metric model at epoch: {epoch}\")\n",
         "                \n",
         "            # Save the loss list\n",
         "            with open(os.path.join(save_dir, 'training_data.pkl'), 'wb') as f:\n",
         "                pickle.dump({\n",
-        "                    'epoch': epoch,\n",
         "                    'epoch_loss_values': epoch_loss_values,\n",
         "                    'metric_values': metric_values,\n",
         "                }, f)\n",
