--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -48,11 +48,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "run_id = 0\n",
+        "run_id = 82\n",
         "DO_MASK = True\n",
         "SET_VARIANCE = True\n",
         "max_epochs = 600\n",
-        "TRAIN_DATA_SIZE = 200\n",
+        "TRAIN_DATA_SIZE = 250\n",
         "BATCHSIZE_TRAIN = 2\n",
         "PIXEL_DOWNSAMPLE = [2, 2, 2]\n",
         "val_interval = 10\n",
@@ -61,6 +61,14 @@
         "CONTINUE_TRAINING = False\n",
         "TRAIN_DATA_SHUFFLE = True\n",
         "root_dir = \"/scratch1/sachinsa/monai_data_1\"\n",
+        "\n",
+        "# test code sanity (for silly errors)\n",
+        "SANITY_CHECK = False\n",
+        "if SANITY_CHECK:\n",
+        "    run_id = 0\n",
+        "    max_epochs = 15\n",
+        "    TRAIN_DATA_SIZE = 10\n",
+        "    val_interval = 2\n",
         "\n",
         "logger.info(\"PARAMETERS\\n-----------------\")\n",
         "logger.info(f\"run_id: {run_id}\")\n",
@@ -180,7 +188,7 @@
         "save_dir = os.path.join(root_dir, f\"run_{run_id}\")\n",
         "if not CONTINUE_TRAINING and os.path.exists(save_dir) and os.path.isdir(save_dir) and len(os.listdir(save_dir)) != 0:\n",
         "    logger.warning(f\"{save_dir} already exists. Avoid overwrite by updating run_id.\")\n",
-        "    exit()\n",
+        "    # exit()\n",
         "else:\n",
         "    os.makedirs(save_dir, exist_ok=True)"
       ]
@@ -441,7 +449,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Define Loss (Guassian Likelihood)"
+        "### Define Loss (Guassian Likelihood and MSE)"
       ]
     },
     {
@@ -450,9 +458,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def GaussianNLLLoss_custom(outputs, target):\n",
+        "def gaussian_nll_loss(outputs, target):\n",
         "    # input is 4 channel images, outputs is 8 channel images\n",
-        "\n",
         "    outputs_mean = outputs[:, :4, ...]\n",
         "    if not SET_VARIANCE:\n",
         "        log_std = torch.zeros_like(outputs_mean) # sigma = 1\n",
@@ -470,8 +477,14 @@
         "\n",
         "    return torch.mean(cost1 + cost2)\n",
         "\n",
-        "# Define the loss function\n",
-        "loss_function = GaussianNLLLoss_custom"
+        "def mse_loss(outputs, target):\n",
+        "    return torch.nn.functional.mse_loss(outputs[:, :4, ...], target)\n",
+        "\n",
+        "def loss_scheduler(epoch):\n",
+        "    if 500 < epoch < 600:\n",
+        "        return mse_loss\n",
+        "    else:\n",
+        "        return gaussian_nll_loss"
       ]
     },
     {
@@ -522,6 +535,7 @@
         "    model.train()\n",
         "    epoch_loss = 0\n",
         "    step = 0\n",
+        "    criterion = loss_scheduler(epoch)\n",
         "    step_start = time.time()\n",
         "    for batch_data in train_loader:\n",
         "        data_loaded_time = time.time() - step_start\n",
@@ -541,7 +555,7 @@
         "                    print(f\"NaN found in gradient of parameter: {name}\")\n",
         "                    exit()\n",
         "            outputs = model(inputs)            \n",
-        "            loss = loss_function(outputs, target)\n",
+        "            loss = criterion(outputs, target)\n",
         "        scaler.scale(loss).backward()\n",
         "        scaler.step(optimizer)\n",
         "        scaler.update()\n",
