fixed validation subset bug

--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = 0 # set this to prevent overlapped saving of model and data\n",
+    "run_id = 11 # set this to prevent overlapped saving of model and data\n",
     "DO_MASK = True\n",
     "VARIANCE_THRESHOLD = True"
    ]
@@ -272,8 +272,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint = torch.load(os.path.join(load_dir, 'latest_checkpoint.pth'), weights_only=True)\n",
-    "model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "# checkpoint = torch.load(os.path.join(load_dir, 'latest_checkpoint.pth'), weights_only=True)\n",
+    "# model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "checkpoint = torch.load(os.path.join(load_dir, 'latest_model.pth'), weights_only=True)\n",
+    "model.load_state_dict(checkpoint)\n",
     "model.eval()\n",
     "channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
     "\n",
