--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -312,7 +312,7 @@
         "\n",
         "if TRAIN_DATA_SIZE:\n",
         "    train_dataset = Subset(train_dataset, list(range(TRAIN_DATA_SIZE)))\n",
-        "    val_dataset = Subset(train_dataset, list(range(TRAIN_DATA_SIZE//4)))\n",
+        "    val_dataset = Subset(val_dataset, list(range(TRAIN_DATA_SIZE//4)))\n",
         "\n",
         "BATCHSIZE_VAL = BATCHSIZE_TRAIN\n",
         "\n",
