combined qr reg to variance files

--- a/src/analyse_results_variance.ipynb
+++ b/src/analyse_results_variance.ipynb
@@ -20,9 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = 11 # set this to prevent overlapped saving of model and data\n",
+    "run_id = 0 # set this to prevent overlapped saving of model and data\n",
     "DO_MASK = True\n",
-    "VARIANCE_THRESHOLD = True"
+    "VARIANCE_THRESHOLD = True\n",
+    "QR_REGRESSION = True"
    ]
   },
   {
@@ -203,10 +204,11 @@
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda:0\")\n",
+    "out_channels = 12 if QR_REGRESSION else 8\n",
     "model = UNet(\n",
     "    spatial_dims=3, # 3D\n",
     "    in_channels=4,\n",
-    "    out_channels=8, # we will output estimated mean and estimated std dev for all 4 image channels\n",
+    "    out_channels=out_channels,\n",
     "    channels=(4, 8, 16),\n",
     "    strides=(2, 2),\n",
     "    num_res_units=2\n",
@@ -272,10 +274,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# checkpoint = torch.load(os.path.join(load_dir, 'latest_checkpoint.pth'), weights_only=True)\n",
-    "# model.load_state_dict(checkpoint['model_state_dict'])\n",
-    "checkpoint = torch.load(os.path.join(load_dir, 'latest_model.pth'), weights_only=True)\n",
-    "model.load_state_dict(checkpoint)\n",
+    "checkpoint = torch.load(os.path.join(load_dir, 'latest_checkpoint.pth'), weights_only=True)\n",
+    "model.load_state_dict(checkpoint['model_state_dict'])\n",
     "model.eval()\n",
     "channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
     "\n",
@@ -317,7 +317,20 @@
     "        if VARIANCE_THRESHOLD:\n",
     "            var_threshold = torch.quantile(brain_slice.float(), 0.95).item()\n",
     "            brain_slice[brain_slice >= var_threshold] = var_threshold\n",
-    "    plt.subplot(3, 4, start_index + index + 1)\n",
+    "    elif label == \"q0\":\n",
+    "        start_index = 4\n",
+    "        title = \"Output: \" + \"q0\"\n",
+    "        brain_slice = this_output[0, index, :, :, h_index]\n",
+    "    elif label == \"q1\":\n",
+    "        start_index = 8\n",
+    "        title = \"Output: \" + r\"qL\" + \"\"\n",
+    "        brain_slice = 0.5*(this_output[0, index+8, :, :, h_index] - this_output[0, index+4, :, :, h_index])\n",
+    "    elif label == \"q2\":\n",
+    "        start_index = 12\n",
+    "        title = \"Output: \" + r\"qU\" + \"\"\n",
+    "        brain_slice = this_output[0, index+8, :, :, h_index]\n",
+    "    num_rows = 4 if QR_REGRESSION else 3\n",
+    "    plt.subplot(num_rows, 4, start_index + index + 1)\n",
     "    if label == \"input\":\n",
     "        plt.title(channels[i], fontsize=30)\n",
     "    brain_slice = brain_slice.detach().cpu().T\n",
@@ -333,10 +346,18 @@
     "plt.figure(\"image\", (24, 18))\n",
     "for i in range(4):\n",
     "    plot_brain(i, \"input\")\n",
-    "for i in range(4):\n",
-    "    plot_brain(i, \"mean\")\n",
-    "for i in range(4):\n",
-    "    plot_brain(i, \"var\")\n",
+    "if QR_REGRESSION:\n",
+    "    for i in range(4):\n",
+    "        plot_brain(i, \"q0\")\n",
+    "    for i in range(4):\n",
+    "        plot_brain(i, \"q1\")\n",
+    "    for i in range(4):\n",
+    "        plot_brain(i, \"q2\")\n",
+    "else:\n",
+    "    for i in range(4):\n",
+    "        plot_brain(i, \"mean\")\n",
+    "    for i in range(4):\n",
+    "        plot_brain(i, \"var\")\n",
     "\n",
     "plt.suptitle(f\"{this_input['id']} (h={h_index}/{im_height})\", fontsize=20)\n",
     "plt.tight_layout()\n",
