--- a/src/main_variance.ipynb
+++ b/src/main_variance.ipynb
@@ -49,6 +49,7 @@
       "outputs": [],
       "source": [
         "run_id = 82\n",
+        "QR_REGRESSION = True\n",
         "DO_MASK = True\n",
         "SET_VARIANCE = True\n",
         "max_epochs = 600\n",
@@ -63,7 +64,7 @@
         "root_dir = \"/scratch1/sachinsa/monai_data_1\"\n",
         "\n",
         "# test code sanity (for silly errors)\n",
-        "SANITY_CHECK = False\n",
+        "SANITY_CHECK = True\n",
         "if SANITY_CHECK:\n",
         "    run_id = 0\n",
         "    max_epochs = 15\n",
@@ -390,10 +391,11 @@
       "outputs": [],
       "source": [
         "device = torch.device(\"cuda:0\")\n",
+        "out_channels = 12 if QR_REGRESSION else 8\n",
         "model = UNet(\n",
         "    spatial_dims=3, # 3D\n",
         "    in_channels=4,\n",
-        "    out_channels=8, # we will output estimated mean and estimated std dev for all 4 image channels\n",
+        "    out_channels=out_channels,\n",
         "    channels=(4, 8, 16),\n",
         "    strides=(2, 2),\n",
         "    num_res_units=2\n",
@@ -449,7 +451,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Define Loss (Guassian Likelihood and MSE)"
+        "### Define Losses"
       ]
     },
     {
@@ -480,11 +482,24 @@
         "def mse_loss(outputs, target):\n",
         "    return torch.nn.functional.mse_loss(outputs[:, :4, ...], target)\n",
         "\n",
+        "def qr_loss(out, tgt, q0=0.5, q1=0.841, q2=0.159):\n",
+        "    out0 = out[:, :4, ...]\n",
+        "    out1 = out[:, 4:8, ...]\n",
+        "    out2 = out[:, 8:, ...]\n",
+        "    custom_loss0 = torch.sum(torch.max(q0 * (out0 - tgt), (q0 - 1.0) * (out0 - tgt)))\n",
+        "    custom_loss1 = torch.sum(torch.max(q1 * (out1 - tgt), (q1 - 1.0) * (out1 - tgt)))\n",
+        "    custom_loss2 = torch.sum(torch.max(q2 * (out2 - tgt), (q2 - 1.0) * (out2 - tgt)))\n",
+        "\n",
+        "    return custom_loss0 + custom_loss1 + custom_loss2\n",
+        "\n",
         "def loss_scheduler(epoch):\n",
-        "    if 500 < epoch < 600:\n",
-        "        return mse_loss\n",
+        "    if QR_REGRESSION:\n",
+        "        return qr_loss\n",
         "    else:\n",
-        "        return gaussian_nll_loss"
+        "        if 500 < epoch < 600:\n",
+        "            return mse_loss\n",
+        "        else:\n",
+        "            return gaussian_nll_loss"
       ]
     },
     {
