--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -20,10 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = 0 # set this to prevent overlapped saving of model and data\n",
-    "DO_MASK = True\n",
+    "RUN_ID = 0 # set this to prevent overlapped saving of model and data\n",
     "VARIANCE_THRESHOLD = True\n",
-    "QR_REGRESSION = True"
+    "ROOT_DIR = \"/scratch1/sachinsa/monai_data_1\""
    ]
   },
   {
@@ -33,13 +32,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import tempfile\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import pdb\n",
     "import numpy as np\n",
     "import pickle\n",
-    "from dataset import BrainMRIDataset"
+    "from dataset import BrainMRIDataset\n",
+    "from logger import Logger\n",
+    "\n",
+    "logger = Logger(log_level='DEBUG')"
    ]
   },
   {
@@ -48,22 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"MONAI_DATA_DIRECTORY\"] = \"/scratch1/sachinsa/monai_data_1\"\n",
-    "directory = os.environ.get(\"MONAI_DATA_DIRECTORY\")\n",
-    "if directory is not None:\n",
-    "    os.makedirs(directory, exist_ok=True)\n",
-    "root_dir = tempfile.mkdtemp() if directory is None else directory\n",
-    "print(root_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "load_dir = os.path.join(root_dir, f\"run_{run_id}\")\n",
-    "fig_save_dir = os.path.join(\"..\", \"figs\", f\"run_{run_id}\")\n",
+    "load_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID}\")\n",
+    "fig_save_dir = os.path.join(\"..\", \"figs\", f\"run_{RUN_ID}\")\n",
     "os.makedirs(fig_save_dir, exist_ok=True)"
    ]
   },
@@ -73,12 +60,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# epoch_loss_values = np.load(os.path.join(load_dir, 'epoch_loss_values.npy')).tolist()\n",
-    "# metric_values = np.load(os.path.join(load_dir, 'metric_values.npy')).tolist()\n",
-    "with open(os.path.join(load_dir, 'training_data.pkl'), 'rb') as f:\n",
-    "    training_data = pickle.load(f)\n",
-    "    epoch_loss_values = training_data['epoch_loss_values']\n",
-    "    metric_values = training_data['metric_values']"
+    "with open(os.path.join(load_dir, 'training_info.pkl'), 'rb') as f:\n",
+    "    training_info = pickle.load(f)\n",
+    "    epoch_loss_values = training_info['epoch_loss_values']\n",
+    "    metric_values = training_info['metric_values']\n",
+    "\n",
+    "with open(os.path.join(load_dir, 'params.pkl'), 'rb') as f:\n",
+    "    params = pickle.load(f)\n",
+    "    DO_MASK = params['DO_MASK']\n",
+    "    QR_REGRESSION = params['QR_REGRESSION']\n",
+    "\n",
+    "logger.info(\"PARAMETERS\\n-----------------\")\n",
+    "logger.info(f\"RUN_ID: {RUN_ID}\")\n",
+    "logger.info(f\"QR_REGRESSION: {QR_REGRESSION}\")\n",
+    "logger.info(f\"DO_MASK: {DO_MASK}\")\n",
+    "logger.info(f\"ROOT_DIR: {ROOT_DIR}\")\n",
+    "print(\"\")"
    ]
   },
   {
@@ -263,7 +260,7 @@
    "outputs": [],
    "source": [
     "all_dataset = BrainMRIDataset(\n",
-    "    root_dir=root_dir,\n",
+    "    root_dir=ROOT_DIR,\n",
     "    transform = val_transform\n",
     ")"
    ]
