--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -31,14 +31,14 @@
       "source": [
         "### Set parameters\n",
         "\n",
-        "* run_id : set this to prevent overlapped saving of model and data\n",
+        "* RUN_ID : set this to prevent overlapped saving of model and data\n",
         "\n",
         "* DO_MASK : Set to True if mask is to be applied while training\n",
         "* SET_VARIANCE : Set to True if variance is to be trained in loss function\n",
         "* PIXEL_DOWNSAMPLE : How much to scale down each axis. In other words, mm per pixel/voxel\n",
         "\n",
-        "* max_epochs\n",
-        "* val_interval : how frequently the validation code should be run\n",
+        "* MAX_EPOCHS\n",
+        "* VAL_INTERVAL : how frequently the validation code should be run\n",
         "* TRAIN_RATIO: proportion of total dataset to be used for training. Rest will be used for validating"
       ]
     },
@@ -48,43 +48,53 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "run_id = 82\n",
+        "RUN_ID = 82\n",
         "QR_REGRESSION = True\n",
         "DO_MASK = True\n",
         "SET_VARIANCE = True\n",
-        "max_epochs = 600\n",
-        "TRAIN_DATA_SIZE = 250\n",
+        "MAX_EPOCHS = 6000\n",
+        "TRAIN_DATA_SIZE = 50\n",
         "BATCHSIZE_TRAIN = 2\n",
-        "PIXEL_DOWNSAMPLE = [2, 2, 2]\n",
-        "val_interval = 10\n",
+        "# PIXEL_DOWNSAMPLE = [2, 2, 2]\n",
+        "VAL_INTERVAL = 10\n",
         "TRAIN_RATIO = 0.8\n",
         "RANDOM_SEED = 0\n",
         "CONTINUE_TRAINING = False\n",
         "TRAIN_DATA_SHUFFLE = True\n",
-        "root_dir = \"/scratch1/sachinsa/monai_data_1\"\n",
+        "ROOT_DIR = \"/scratch1/sachinsa/monai_data_1\"\n",
         "\n",
         "# test code sanity (for silly errors)\n",
-        "SANITY_CHECK = True\n",
+        "SANITY_CHECK = False\n",
         "if SANITY_CHECK:\n",
-        "    run_id = 0\n",
-        "    max_epochs = 15\n",
+        "    RUN_ID = 0\n",
+        "    MAX_EPOCHS = 15\n",
         "    TRAIN_DATA_SIZE = 10\n",
-        "    val_interval = 2\n",
+        "    VAL_INTERVAL = 2\n",
+        "\n",
+        "params = {\n",
+        "    'RUN_ID': RUN_ID,\n",
+        "    'QR_REGRESSION': QR_REGRESSION,\n",
+        "    'DO_MASK': DO_MASK,\n",
+        "    'SET_VARIANCE': SET_VARIANCE,\n",
+        "    'MAX_EPOCHS': MAX_EPOCHS,\n",
+        "    'ROOT_DIR': ROOT_DIR\n",
+        "}\n",
         "\n",
         "logger.info(\"PARAMETERS\\n-----------------\")\n",
-        "logger.info(f\"run_id: {run_id}\")\n",
+        "logger.info(f\"RUN_ID: {RUN_ID}\")\n",
+        "logger.info(f\"QR_REGRESSION: {QR_REGRESSION}\")\n",
         "logger.info(f\"DO_MASK: {DO_MASK}\")\n",
         "logger.info(f\"SET_VARIANCE: {SET_VARIANCE}\")\n",
-        "logger.info(f\"max_epochs: {max_epochs}\")\n",
+        "logger.info(f\"MAX_EPOCHS: {MAX_EPOCHS}\")\n",
         "logger.info(f\"TRAIN_DATA_SIZE: {TRAIN_DATA_SIZE}\")\n",
         "logger.info(f\"BATCHSIZE_TRAIN: {BATCHSIZE_TRAIN}\")\n",
-        "logger.info(f\"PIXEL_DOWNSAMPLE: {PIXEL_DOWNSAMPLE}\")\n",
-        "logger.info(f\"val_interval: {val_interval}\")\n",
+        "# logger.info(f\"PIXEL_DOWNSAMPLE: {PIXEL_DOWNSAMPLE}\")\n",
+        "logger.info(f\"VAL_INTERVAL: {VAL_INTERVAL}\")\n",
         "logger.info(f\"TRAIN_RATIO: {TRAIN_RATIO}\")\n",
         "logger.info(f\"RANDOM_SEED: {RANDOM_SEED}\")\n",
         "logger.info(f\"CONTINUE_TRAINING: {CONTINUE_TRAINING}\")\n",
         "logger.info(f\"TRAIN_DATA_SHUFFLE: {TRAIN_DATA_SHUFFLE}\")\n",
-        "logger.info(f\"root_dir: {root_dir}\")\n",
+        "logger.info(f\"ROOT_DIR: {ROOT_DIR}\")\n",
         "print(\"\")"
       ]
     },
@@ -186,9 +196,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "save_dir = os.path.join(root_dir, f\"run_{run_id}\")\n",
+        "save_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID}\")\n",
         "if not CONTINUE_TRAINING and os.path.exists(save_dir) and os.path.isdir(save_dir) and len(os.listdir(save_dir)) != 0:\n",
-        "    logger.warning(f\"{save_dir} already exists. Avoid overwrite by updating run_id.\")\n",
+        "    logger.warning(f\"{save_dir} already exists. Avoid overwrite by updating RUN_ID.\")\n",
         "    # exit()\n",
         "else:\n",
         "    os.makedirs(save_dir, exist_ok=True)"
@@ -231,8 +241,9 @@
       },
       "outputs": [],
       "source": [
-        "crop_size = [224, 224, 144]\n",
-        "resize_size = [crop_size[i]//PIXEL_DOWNSAMPLE[i] for i in range(len(crop_size))]\n",
+        "# crop_size = [224, 224, 144]\n",
+        "# resize_size = [crop_size[i]//PIXEL_DOWNSAMPLE[i] for i in range(len(crop_size))]\n",
+        "resize_size = [64,64,64]\n",
         "\n",
         "train_transform = Compose(\n",
         "    [\n",
@@ -241,18 +252,18 @@
         "        EnsureChannelFirst(),\n",
         "        EnsureType(),\n",
         "        Orientation(axcodes=\"RAS\"),\n",
-        "        Spacing(\n",
-        "            pixdim=(1.0, 1.0, 1.0),\n",
-        "            mode=(\"bilinear\", \"nearest\"),\n",
-        "        ),\n",
-        "        RandSpatialCrop(roi_size=crop_size, random_size=False),\n",
+        "        # Spacing(\n",
+        "        #     pixdim=(1.0, 1.0, 1.0),\n",
+        "        #     mode=(\"bilinear\", \"nearest\"),\n",
+        "        # ),\n",
+        "        # RandSpatialCrop(roi_size=crop_size, random_size=False),\n",
         "        Resize(spatial_size=resize_size, mode='nearest'),\n",
-        "        RandFlip(prob=0.5, spatial_axis=0),\n",
-        "        RandFlip(prob=0.5, spatial_axis=1),\n",
-        "        RandFlip(prob=0.5, spatial_axis=2),\n",
+        "        # RandFlip(prob=0.5, spatial_axis=0),\n",
+        "        # RandFlip(prob=0.5, spatial_axis=1),\n",
+        "        # RandFlip(prob=0.5, spatial_axis=2),\n",
         "        NormalizeIntensity(nonzero=True, channel_wise=True),\n",
-        "        RandScaleIntensity(factors=0.1, prob=1.0),\n",
-        "        RandShiftIntensity(offsets=0.1, prob=1.0),\n",
+        "        # RandScaleIntensity(factors=0.1, prob=1.0),\n",
+        "        # RandShiftIntensity(offsets=0.1, prob=1.0),\n",
         "    ]\n",
         ")\n",
         "\n",
@@ -262,11 +273,11 @@
         "        EnsureChannelFirst(),\n",
         "        EnsureType(),\n",
         "        Orientation(axcodes=\"RAS\"),\n",
-        "        Spacing(\n",
-        "            pixdim=(1.0, 1.0, 1.0),\n",
-        "            mode=(\"bilinear\", \"nearest\"),\n",
-        "        ),\n",
-        "        CenterSpatialCrop(roi_size=crop_size), # added this because model was not handling 155dims\n",
+        "        # Spacing(\n",
+        "        #     pixdim=(1.0, 1.0, 1.0),\n",
+        "        #     mode=(\"bilinear\", \"nearest\"),\n",
+        "        # ),\n",
+        "        # CenterSpatialCrop(roi_size=crop_size), # added this because model was not handling 155dims\n",
         "        Resize(spatial_size=resize_size, mode='nearest'),\n",
         "        NormalizeIntensity(nonzero=True, channel_wise=True),\n",
         "    ]\n",
@@ -300,7 +311,7 @@
         "from torch.utils.data import Subset\n",
         "\n",
         "all_dataset = BrainMRIDataset(\n",
-        "    root_dir=root_dir,\n",
+        "    root_dir=ROOT_DIR,\n",
         "    seed = RANDOM_SEED\n",
         ")\n",
         "\n",
@@ -427,7 +438,7 @@
       "outputs": [],
       "source": [
         "optimizer = torch.optim.Adam(model.parameters(), 1e-4, weight_decay=1e-5)\n",
-        "lr_scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=max_epochs)\n",
+        "lr_scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=MAX_EPOCHS)\n",
         "ep_start = 1\n",
         "\n",
         "epoch_loss_values = []\n",
@@ -441,10 +452,10 @@
         "    lr_scheduler.load_state_dict(checkpoint['scheduler_state_dict'])\n",
         "    ep_start = checkpoint['epoch']\n",
         "\n",
-        "    with open(os.path.join(load_dir, 'training_data.pkl'), 'rb') as f:\n",
-        "        training_data = pickle.load(f)\n",
-        "        epoch_loss_values = training_data['epoch_loss_values']\n",
-        "        metric_values = training_data['metric_values']"
+        "    with open(os.path.join(load_dir, 'training_info.pkl'), 'rb') as f:\n",
+        "        training_info = pickle.load(f)\n",
+        "        epoch_loss_values = training_info['epoch_loss_values']\n",
+        "        metric_values = training_info['metric_values']"
       ]
     },
     {
@@ -531,6 +542,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Save params\n",
+        "with open(os.path.join(save_dir, 'params.pkl'), 'wb') as f:\n",
+        "    pickle.dump(params, f)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "m8xDYlbRKX7T",
         "scrolled": true,
@@ -543,10 +565,10 @@
         "\n",
         "logger.debug(\"Beginning training...\")\n",
         "total_start = time.time()\n",
-        "for epoch in range(ep_start, max_epochs+1):\n",
+        "for epoch in range(ep_start, MAX_EPOCHS+1):\n",
         "    epoch_start_time = time.time()\n",
         "    logger.info(\"-\" * 10)\n",
-        "    logger.info(f\"epoch {epoch}/{max_epochs}\")\n",
+        "    logger.info(f\"epoch {epoch}/{MAX_EPOCHS}\")\n",
         "    model.train()\n",
         "    epoch_loss = 0\n",
         "    step = 0\n",
@@ -593,7 +615,7 @@
         "    epoch_loss_values.append(epoch_loss)\n",
         "    logger.info(f\"epoch {epoch} average loss: {epoch_loss:.4f}\")\n",
         "\n",
-        "    if epoch % val_interval == 0:\n",
+        "    if epoch % VAL_INTERVAL == 0:\n",
         "        model.eval()\n",
         "        with torch.no_grad():\n",
         "            for val_data in val_loader:\n",
@@ -633,7 +655,7 @@
         "                logger.info(f\"saved new best metric model at epoch: {epoch}\")\n",
         "                \n",
         "            # Save the loss list\n",
-        "            with open(os.path.join(save_dir, 'training_data.pkl'), 'wb') as f:\n",
+        "            with open(os.path.join(save_dir, 'training_info.pkl'), 'wb') as f:\n",
         "                pickle.dump({\n",
         "                    'epoch_loss_values': epoch_loss_values,\n",
         "                    'metric_values': metric_values,\n",
@@ -657,7 +679,7 @@
       "outputs": [],
       "source": [
         "logger.info(f\"train completed, best_metric: {best_metric:.4f} at epoch: {best_metric_epoch}\")\n",
-        "logger.info(f\"Training time: {total_time//max_epochs:.1f}s/ep (total: {total_time//3600:.0f}h {(total_time//60)%60:.0f}m)\")"
+        "logger.info(f\"Training time: {total_time//MAX_EPOCHS:.1f}s/ep (total: {total_time//3600:.0f}h {(total_time//60)%60:.0f}m)\")"
       ]
     }
   ],
