3d segmentation init commit

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -48,7 +48,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "RUN_ID = 82\n",
+        "RUN_ID = 20\n",
         "QR_REGRESSION = True\n",
         "DO_MASK = True\n",
         "SET_VARIANCE = True\n",
@@ -587,18 +587,18 @@
         "            target = inputs.clone()\n",
         "            if DO_MASK:\n",
         "                inputs = inputs*~mask[:,:,None,None,None]\n",
-        "            for name, param in model.named_parameters():\n",
-        "                if param.grad is not None and torch.isnan(param.grad).any():\n",
-        "                    print(f\"NaN found in gradient of parameter: {name}\")\n",
-        "                    exit()\n",
+        "            # for name, param in model.named_parameters():\n",
+        "            #     if param.grad is not None and torch.isnan(param.grad).any():\n",
+        "            #         print(f\"NaN found in gradient of parameter: {name}\")\n",
+        "            #         exit()\n",
         "            outputs = model(inputs)            \n",
         "            loss = criterion(outputs, target)\n",
         "        scaler.scale(loss).backward()\n",
         "        scaler.step(optimizer)\n",
         "        scaler.update()\n",
-        "        if epoch > 10 and loss.item() > 1e5:\n",
-        "            logger.warning(f\"large loss encountered: {loss.item()}!\")\n",
-        "            exit()\n",
+        "        # if epoch > 10 and loss.item() > 1e5:\n",
+        "        #     logger.warning(f\"large loss encountered: {loss.item()}!\")\n",
+        "        #     exit()\n",
         "        if np.isnan(loss.item()):\n",
         "            logger.warning(\"nan value encountered!\")\n",
         "            exit()\n",
