segmentation and analyse code

--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## To analyse the training result"
+    "## To analyse synthesis and uncertainty"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "source": [
     "RUN_ID = 20 # set this to prevent overlapped saving of model and data\n",
     "VARIANCE_THRESHOLD = True\n",
-    "ROOT_DIR = \"/scratch1/sachinsa/monai_data_1\""
+    "ROOT_DIR = \"/scratch1/sachinsa/cont_syn\""
    ]
   },
   {
@@ -107,45 +107,8 @@
    "outputs": [],
    "source": [
     "max_epochs = len(epoch_loss_values)\n",
-    "val_interval = len(epoch_loss_values)//len(metric_values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4600"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(epoch_loss_values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0% of values are nan!!!\n"
-     ]
-    }
-   ],
-   "source": [
-    "nan_ratio = np.sum(np.isnan(epoch_loss_values))/len(epoch_loss_values)\n",
-    "print(f\"{100*nan_ratio:.1f}% of values are nan!!!\")"
+    "val_interval = len(epoch_loss_values)//len(metric_values)\n",
+    "print(max_epochs)"
    ]
   },
   {
@@ -277,18 +240,13 @@
     "    num_res_units=2\n",
     ").to(device)\n",
     "\n",
-    "VAL_AMP = True\n",
-    "\n",
     "# define inference method\n",
     "def inference(input):\n",
     "    def _compute(input):\n",
     "        output = model(input)\n",
     "        return output\n",
-    "\n",
-    "    if VAL_AMP:\n",
-    "        with torch.amp.autocast('cuda'):\n",
-    "            return _compute(input)\n",
-    "    else:\n",
+    "    \n",
+    "    with torch.amp.autocast('cuda'):\n",
     "        return _compute(input)"
    ]
   },
@@ -338,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint = torch.load(os.path.join(load_dir, 'latest_checkpoint.pth'), weights_only=True)\n",
+    "checkpoint = torch.load(os.path.join(load_dir, 'best_checkpoint.pth'), weights_only=True)\n",
     "model.load_state_dict(checkpoint['model_state_dict'])\n",
     "model.eval()\n",
     "channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
