--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -61,7 +61,7 @@
         "RANDOM_SEED = 0\n",
         "CONTINUE_TRAINING = False\n",
         "TRAIN_DATA_SHUFFLE = True\n",
-        "ROOT_DIR = \"/scratch1/sachinsa/monai_data_1\"\n",
+        "ROOT_DIR = \"/scratch1/sachinsa/cont_syn\"\n",
         "\n",
         "# test code sanity (for silly errors)\n",
         "SANITY_CHECK = False\n",
@@ -350,11 +350,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "jnvWc-L1KX7S"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'is_notebook' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# pick one image from DecathlonDataset to visualize and check the 4 channels\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mis_notebook\u001b[49m():\n\u001b[1;32m      3\u001b[0m     channels \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFLAIR\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT1w\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT1gd\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT2w\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m      4\u001b[0m     val_data_example \u001b[38;5;241m=\u001b[39m val_dataset[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'is_notebook' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# pick one image from DecathlonDataset to visualize and check the 4 channels\n",
         "if is_notebook():\n",
@@ -587,18 +599,11 @@
         "            target = inputs.clone()\n",
         "            if DO_MASK:\n",
         "                inputs = inputs*~mask[:,:,None,None,None]\n",
-        "            # for name, param in model.named_parameters():\n",
-        "            #     if param.grad is not None and torch.isnan(param.grad).any():\n",
-        "            #         print(f\"NaN found in gradient of parameter: {name}\")\n",
-        "            #         exit()\n",
         "            outputs = model(inputs)            \n",
         "            loss = criterion(outputs, target)\n",
         "        scaler.scale(loss).backward()\n",
         "        scaler.step(optimizer)\n",
         "        scaler.update()\n",
-        "        # if epoch > 10 and loss.item() > 1e5:\n",
-        "        #     logger.warning(f\"large loss encountered: {loss.item()}!\")\n",
-        "        #     exit()\n",
         "        if np.isnan(loss.item()):\n",
         "            logger.warning(\"nan value encountered!\")\n",
         "            exit()\n",
